--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,15 +1,62 @@
 {{setTitle "Home Page"}}
 
-<section class="featured-product">
-  <h2>Your destination for luxurious, skin-loving cosmetics crafted with care</h2>
-  <h2>Discover Our Collection</h2>
-  <div class="products">
-    {{#each products}}
-  {{> product}}
-    {{else}}  
+<section class="container">
+  <h1>My Theater Info</h1>
+  <p>Lorem reprehenderit nostrud do do ut ad irure aliquip anim adipisicing
+    nulla ullamco. Non mollit Lorem sunt proident nostrud dolore est minim
+    reprehenderit adipisicing consectetur dolore. Nostrud id amet ad irure irure
+    aute ad veniam deserunt mollit sint pariatur. Velit quis amet aliquip
+    tempor. Dolore culpa deserunt proident nostrud amet consectetur.
+    Exercitation exercitation pariatur deserunt duis. Elit duis aute do ullamco
+    fugiat magna officia ad. Pariatur nulla ut pariatur Lorem pariatur
+    incididunt eu excepteur sint qui. Amet esse et eiusmod officia fugiat
+    aliquip ullamco laboris sint cillum cillum. Elit proident mollit officia
+    tempor aliquip non ea occaecat sunt eiusmod enim nulla anim. Voluptate
+    laborum consequat elit quis cupidatat tempor ad laboris duis non eiusmod.</p>
+</section>
 
-<p class="no-post">There are no products found yet!</p>
-    {{/each}}
-    <!-- <p class="no-post">There are no products found yet!</p> -->
+<section>
+  <h1>Best Rated Plays</h1>
+  <div class="theaters-container">
+    <div>
+      <div class="home-image">
+        <img
+          src="https://media.timeout.com/images/103727744/380/285/image.jpg"
+          alt="Card image cap"
+          width="400"
+        />
+      </div>
+      <div class="info">
+        <h4>Who's Afraid of Virginia Woolf? by Edward Albee</h4>
+      </div>
+    </div>
+
+    <div>
+      <div class="home-image">
+        <img
+          src="https://media.timeout.com/images/103727745/380/285/image.jpg"
+          alt="Card image cap"
+          width="400"
+        />
+      </div>
+      <div class="info">
+        <h4>Death of a Salesman by Arthur Miller</h4>
+      </div>
+    </div>
+
+    <div>
+      <div class="home-image">
+        <img
+          src="https://media.timeout.com/images/103727757/380/285/image.jpg"
+          alt="Card image cap"
+          width="400"
+        />
+      </div>
+      <div class="info">
+        <h4>This Is Our Youth by Kenneth Lonergan</h4>
+      </div>
+    </div>
+
+    <!-- <h4>No plays yet...</h4> -->
   </div>
 </section>
