--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,4 +1,3 @@
-
 <html lang="en">
 
   <head>
@@ -14,10 +13,15 @@
     <nav>
       <a>Theater</a>
       <ul>
-        <li><a href="#">Home </a></li>
-        <li><a href="#">Logout</a></li>
-        <li><a href="#">Login</a></li>
-        <li><a href="#">Register</a></li>
+        <li><a href="/">Home</a></li>
+        {{#if user.isAuthenticated}}
+
+          <li><a href="/users/logout">Logout</a></li>
+        {{else}}
+
+          <li><a href="/users/login">Login</a></li>
+          <li><a href="/users/register">Register</a></li>
+        {{/if}}
       </ul>
     </nav>
 
