--- a/src/views/user/login.hbs
+++ b/src/views/user/login.hbs
@@ -1,15 +1,20 @@
 {{setTitle "Login Page"}}
 
-<section class="form-container">
+<form method="post">
   <h2>Login</h2>
-  <form method="post">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" value="{{email}}" />
-
+  <div>
+    <label for="username">Username:</label>
+    <input
+      type="text"
+      placeholder="Username"
+      name="username"
+      value="{{username}}"
+    />
+  </div>
+  <div>
     <label for="password">Password:</label>
-    <input type="password" id="password" name="password" />
+    <input type="password" placeholder="Password" name="password" />
+  </div>
 
-    <button type="submit">Login</button>
-  </form>
-  <p>Don't have an account? <a href="/users/register">Register here</a>.</p>
-</section>
+  <button class="btn" type="submit">Login</button>
+</form>
