--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -16,6 +16,7 @@
         <li><a href="/">Home</a></li>
         {{#if user.isAuthenticated}}
 
+          <li><a href="/plays/create">Create New Play</a></li>
           <li><a href="/users/logout">Logout</a></li>
         {{else}}
 
