--- a/src/views/play/create.hbs
+++ b/src/views/play/create.hbs
@@ -28,12 +28,7 @@
     />
   </div>
   <div class="check">
-    <input
-      type="checkbox"
-      id="check-box"
-      name="isPublic"
-      value="{{data.isPublic}}"
-    />
+    <input type="checkbox" id="check-box" name="isPublic" value="on" />
     <label for="check-box">Public</label>
   </div>
   <button class="btn" type="submit">Submit</button>
