Likes funcionallity is made.

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -28,7 +28,7 @@
           {{#if ../user.isAuthenticated}}
           <div class="info-buttons">
             <a class="btn details" href="/plays/{{id}}/details">Details</a>
-            <span class="likes">6 likes</span>
+            <span class="likes">{{likes.length}} likes</span>
           </div>
           {{/if}}
         </div>
